--- a/water-my-plants/src/index.css
+++ b/water-my-plants/src/index.css
@@ -57,3 +57,17 @@ a {
   color: inherit;
   text-decoration: none;
 }
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+  font-size: 62.5%;
+}
+
+body {
+  font-size: 1.6rem;
+}
