--- a/water-my-plants/src/App.css
+++ b/water-my-plants/src/App.css
@@ -54,7 +54,7 @@
 }
 
 .ui.form .field.mg-top{
-  margin-top: 40px;
+  margin-top: 20px;
 }
 
 .ui.form .field>input {
@@ -95,6 +95,7 @@
 
 /*Changing styles of button */
 .addplant {
+  display: inline-block;
   height: 40px;
   padding: 0;
   margin-top: 20px;
@@ -106,13 +107,13 @@
   font-size:  1.4rem;
   text-transform: uppercase;
   font-weight: 700;
-  padding-top: 5px;
+  padding-top: 13px;
   padding-bottom: 2px;
-  display: inline-block;
   border-radius: 3px;
   cursor: pointer;
 }
 
 .addplant:hover{
   background: #76a088;
+  color: #fff;
 }
